# onedl-mmpretrain

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.dev_scripts/: check_metafile.py  ckpt_tree.py  compare_init.py  fill_metafile.py  generate_readme.py
.dev_scripts/benchmark_regression/: 1-benchmark_valid.py  2-benchmark_test.py  3-benchmark_train.py  4-benchmark_speed.py  utils.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1_bug-report.yml  2_feature-request.yml  config.yml
.github/workflows/: docker.yml  lint.yml  merge_stage_test.yml  pr_stage_test.yml  publish-to-pypi.yml  test_mim.yml
configs/arcface/: README.md  resnet50-arcface_8xb32_inshop.py
configs/barlowtwins/: README.md
configs/beit/: README.md  beit_beit-base-p16_8xb256-amp-coslr-300e_in1k.py
configs/beitv2/: README.md  beitv2_beit-base-p16_8xb256-amp-coslr-1600e_in1k.py  beitv2_beit-base-p16_8xb256-amp-coslr-300e_in1k.py
configs/blip/: README.md
configs/blip2/: README.md
configs/byol/: README.md
configs/cae/: README.md  cae_beit-base-p16_8xb256-amp-coslr-300e_in1k.py
configs/chinese_clip/: README.md  cn-clip_resnet50_zeroshot-cls_cifar100.py  cn-clip_vit-base-p16_zeroshot-cls_cifar100.py  cn-clip_vit-huge-p14_zeroshot-cls_cifar100.py  cn-clip_vit-large-p14_zeroshot-cls_cifar100.py
configs/clip/: README.md
configs/conformer/: README.md
configs/convmixer/: README.md
configs/convnext/: README.md
configs/convnext_v2/: README.md
configs/cspnet/: README.md
configs/csra/: README.md  resnet101-csra_1xb16_voc07-448px.py
configs/davit/: README.md
configs/deit/: README.md
configs/deit3/: README.md
configs/densecl/: README.md
configs/densenet/: README.md
configs/edgenext/: README.md
configs/efficientformer/: README.md
configs/efficientnet/: README.md
configs/efficientnet_v2/: README.md
configs/eva/: README.md  eva-mae-style_vit-base-p16_16xb256-coslr-400e_in1k.py
configs/eva02/: README.md
configs/flamingo/: README.md  flamingo_fewshot_caption.py  flamingo_fewshot_vqa.py  flamingo_zeroshot_caption.py  flamingo_zeroshot_vqa.py
configs/hornet/: README.md
configs/hrnet/: README.md
configs/inception_v3/: README.md
configs/itpn/: itpn-clip-b_hivit-base-p16_8xb256-amp-coslr-300e_in1k.py  itpn-clip-b_hivit-base-p16_8xb256-amp-coslr-800e_in1k.py
configs/levit/: README.md
configs/llava/: llava-7b-v1.5_caption.py  llava-7b-v1.5_vqa.py  llava-7b-v1_caption.py
configs/mae/: README.md
configs/maskfeat/: README.md
configs/mff/: README.md
configs/milan/: README.md  milan_vit-base-p16_16xb256-amp-coslr-400e_in1k.py
configs/minigpt4/: minigpt-4_baichuan-7b_caption.py  minigpt-4_vicuna-7b_caption.py
configs/mixmim/: README.md
configs/mlp_mixer/: README.md
configs/mobilenet_v2/: README.md
configs/mobilenet_v3/: README.md
demo/: image_demo.py
docker/: Dockerfile
projects/: README.md
(+330 files in other folders)
