[project]
name = "onedl-mmpretrain"
version = "1.3.0-rc.0"
description = "OpenMMLab Model Pretraining Toolbox and Benchmark"
readme = "README.md"
authors = [
    { name = "VBTI Contributors", email = "dev@vbti.nl" }
]
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["computer vision", "image classification", "unsupervised learning", "self-supervised learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "einops",
    "importlib-metadata",
    "mat4py",
    "matplotlib",
    "modelindex",
    "numpy",
    "rich",
]

[dependency-groups]
tests = [
    "coverage",
    "interrogate",
    "pytest",
    ##
    "opencv-python",
    "torch", "torchvision",
    "scikit-learn>=1.5",
    "requests",
    "grad-cam>=1.3.6"
]
docs = [
    "docutils==0.18.1",
    "modelindex",
    "myst-parser",
    "pytorch_sphinx_theme @ git+https://github.com/VBTI-development/onedl_sphinx_theme.git@pt",
    "sphinx==6.1.3",
    "sphinx-copybutton",
    "sphinx-notfound-page",
    "sphinx-tabs",
    "sphinxcontrib-jquery",
    "tabulate",
]
readthedocs = [
    "mmcv-lite>=2.0.0rc4",
    "mmengine",
    "pycocotools",
    "torch",
    "torchvision",
    "transformers",
]

[project.optional-dependencies]
multimodal = [
    "pycocotools",
    "transformers>=4.28.0",
]
mminstall = [
    "mmcv>=2.0.0",
    "mmengine>=0.8.3,<1.0.0",
]
optional = [
    "albumentations>=0.3.2",
    "grad-cam>=1.3.7,<1.5.0",
    "requests",
    "scikit-learn"
]
torch = [ "torch<2.6", "torchvision" ]

[project.urls]
Homepage = "https://onedl.ai"
Repository = "https://github.com/VBTI-development/onedl-mmengine"
Documentation = "https://mmpretrain.readthedocs.io/en/latest/"

[tool.setuptools.packages.find]
include = ["mmpretrain", "mmpretrain.*"]
exclude = ['configs', 'tools', 'demo', 'tests']
namespaces = false

[tool.uv]
# uv-specific configuration can be added here if needed

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
line_length = 79
multi_line_output = 0
extra_standard_library = ["setuptools"]
known_first_party = ["mmpretrain"]
known_third_party = ["pytest", "yaml"]
no_lines_before = ["STDLIB", "LOCALFOLDER"]
default_section = "THIRDPARTY"  # codespell:ignore

[tool.yapf]
based_on_style = "pep8"
blank_line_before_nested_class_or_def = true
split_before_expression_after_opening_paren = true

[tool.codespell]
skip = "*.ipynb, configs/*/README.md"
quiet-level = 3
ignore-words-list = "patten,confectionery,nd,ty,warmup"  # codespell:ignore

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
